--- a/demo-expo-stack-project/app.json
+++ b/demo-expo-stack-project/app.json
@@ -3,7 +3,6 @@
     "name": "demo-expo-stack-project",
     "slug": "demo-expo-stack-project",
     "version": "1.0.0",
-
     "scheme": "demo-expo-stack-project",
     "web": {
       "bundler": "metro",
@@ -13,15 +12,11 @@
     "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true,
-
       "tsconfigPaths": true
     },
-
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-
     "userInterfaceStyle": "light",
-
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -35,6 +30,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "7a6b4486-6569-40ec-9d7f-208f93b826cc"
       }
     }
   }
