--- a/demo-expo-stack-project/app.json
+++ b/demo-expo-stack-project/app.json
@@ -30,7 +30,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.fredle09.demoexpostackproject"
     },
     "extra": {
       "eas": {
