chores: update owner property in app.config.json

--- a/demo-expo-stack-project/app.json
+++ b/demo-expo-stack-project/app.json
@@ -37,6 +37,7 @@
       "eas": {
         "projectId": "7a6b4486-6569-40ec-9d7f-208f93b826cc"
       }
-    }
+    },
+    "owner": "fredle09"
   }
 }
