--- a/demo-expo-stack-project/package.json
+++ b/demo-expo-stack-project/package.json
@@ -15,6 +15,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.7",
+    "@rn-primitives/checkbox": "^1.0.4",
     "@rn-primitives/label": "^1.0.4",
     "@rn-primitives/slot": "^1.0.4",
     "@rn-primitives/types": "^1.0.4",
