--- a/demo-expo-stack-project/app.json
+++ b/demo-expo-stack-project/app.json
@@ -9,7 +9,7 @@
       "output": "static",
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": ["expo-router", "expo-build-properties"],
     "experiments": {
       "typedRoutes": true,
       "tsconfigPaths": true
