--- a/demo-expo-stack-project/components.json
+++ b/demo-expo-stack-project/components.json
@@ -1,7 +1,7 @@
 {
   "platforms": "native-only",
   "aliases": {
-    "components": "~/components",
-    "lib": "~/lib"
+    "components": "@/components",
+    "lib": "@/lib"
   }
 }
