--- a/demo-expo-stack-project/app.json
+++ b/demo-expo-stack-project/app.json
@@ -24,7 +24,8 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.fredle09.demoexpostackproject"
     },
     "android": {
       "adaptiveIcon": {
