--- a/demo-expo-stack-project/package.json
+++ b/demo-expo-stack-project/package.json
@@ -16,7 +16,6 @@
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.7",
-    "@rn-primitives/checkbox": "^1.0.4",
     "@rn-primitives/label": "^1.0.4",
     "@rn-primitives/slot": "^1.0.4",
     "@rn-primitives/types": "^1.0.4",
@@ -27,6 +26,7 @@
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.1",
     "expo-linking": "~6.3.1",
+    "expo-network": "~6.0.1",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
