--- a/lab-1/package.json
+++ b/lab-1/package.json
@@ -16,6 +16,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.7",
     "@rn-primitives/alert-dialog": "^1.0.4",
     "@rn-primitives/avatar": "^1.0.5",
@@ -35,6 +36,7 @@
     "expo-dev-client": "~4.0.26",
     "expo-image": "~1.12.15",
     "expo-linking": "~6.3.1",
+    "expo-navigation-bar": "~3.0.7",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
@@ -46,10 +48,12 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-pager-view": "^6.4.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "^15.7.1",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.10",
     "sonner-native": "^0.14.2",
     "tailwind-merge": "^2.5.2",
@@ -60,6 +64,7 @@
     "@types/react": "~18.2.45",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
+    "ajv": "^8.17.1",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
     "prettier": "^3.2.5",
