--- a/lab-2/package.json
+++ b/lab-2/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.15",
@@ -32,10 +33,10 @@
     "@supabase/supabase-js": "^2.38.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "expo": "^51.0.32",
+    "expo": "~51.0.37",
     "expo-constants": "~16.0.1",
-    "expo-dev-client": "~4.0.26",
-    "expo-image": "~1.12.15",
+    "expo-dev-client": "~4.0.28",
+    "expo-image": "~1.13.0",
     "expo-linking": "~6.3.1",
     "expo-navigation-bar": "~3.0.7",
     "expo-router": "~3.5.14",
@@ -47,14 +48,16 @@
     "nativewind": "next",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-pager-view": "^6.4.1",
+    "react-native-pager-view": "^6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.7.1",
+    "react-native-svg": "^15.2.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "sonner-native": "^0.14.2",
     "tailwind-merge": "^2.5.2",
