--- a/lab-2/package.json
+++ b/lab-2/package.json
@@ -19,17 +19,18 @@
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.7",
-    "@rn-primitives/alert-dialog": "^1.0.4",
-    "@rn-primitives/avatar": "^1.0.5",
-    "@rn-primitives/checkbox": "^1.0.4",
-    "@rn-primitives/dialog": "^1.0.4",
-    "@rn-primitives/label": "^1.0.4",
-    "@rn-primitives/portal": "^1.0.4",
-    "@rn-primitives/slot": "^1.0.4",
-    "@rn-primitives/switch": "^1.0.4",
-    "@rn-primitives/tabs": "^1.0.4",
-    "@rn-primitives/toggle": "^1.0.4",
-    "@rn-primitives/types": "^1.0.4",
+    "@rn-primitives/accordion": "^1.1.0",
+    "@rn-primitives/alert-dialog": "^1.1.0",
+    "@rn-primitives/avatar": "^1.1.0",
+    "@rn-primitives/checkbox": "^1.1.0",
+    "@rn-primitives/dialog": "^1.1.0",
+    "@rn-primitives/label": "^1.1.0",
+    "@rn-primitives/portal": "^1.1.0",
+    "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/switch": "^1.1.0",
+    "@rn-primitives/tabs": "^1.1.0",
+    "@rn-primitives/toggle": "^1.1.0",
+    "@rn-primitives/types": "^1.1.0",
     "@supabase/supabase-js": "^2.38.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
