--- a/lab-2/package.json
+++ b/lab-2/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@gorhom/bottom-sheet": "^5.0.4",
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "^4.5.4",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/material-top-tabs": "^6.6.14",
@@ -33,7 +35,9 @@
     "@rn-primitives/tabs": "^1.1.0",
     "@rn-primitives/toggle": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
+    "@shopify/flash-list": "^1.7.1",
     "@supabase/supabase-js": "^2.38.4",
+    "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "expo": "~51.0.37",
@@ -53,6 +57,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
+    "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-pager-view": "^6.3.0",
     "react-native-reanimated": "~3.10.1",
@@ -60,6 +65,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.2.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "sonner-native": "^0.14.2",
