--- a/lab-3/package.json
+++ b/lab-3/package.json
@@ -59,7 +59,7 @@
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-pager-view": "^6.3.0",
+    "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
