--- a/lab-3/package.json
+++ b/lab-3/package.json
@@ -16,7 +16,7 @@
     "@gorhom/bottom-sheet": "^5.0.4",
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/slider": "^4.5.4",
+    "@react-native-community/slider": "^4.5.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/material-top-tabs": "^6.6.14",
@@ -35,12 +35,12 @@
     "@rn-primitives/tabs": "^1.1.0",
     "@rn-primitives/toggle": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
-    "@shopify/flash-list": "^1.7.1",
+    "@shopify/flash-list": "^1.6.4",
     "@supabase/supabase-js": "^2.38.4",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "expo": "~51.0.37",
+    "expo": "~51.0.38",
     "expo-constants": "~16.0.1",
     "expo-dev-client": "~4.0.28",
     "expo-image": "~1.13.0",
@@ -69,6 +69,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "sonner-native": "^0.14.2",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
