--- a/lab-3/package.json
+++ b/lab-3/package.json
@@ -16,7 +16,7 @@
     "@gorhom/bottom-sheet": "^5.0.4",
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/slider": "^4.5.2",
+    "@react-native-community/slider": "4.5.5",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/material-top-tabs": "^6.6.14",
@@ -35,47 +35,48 @@
     "@rn-primitives/tabs": "^1.1.0",
     "@rn-primitives/toggle": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
-    "@shopify/flash-list": "^1.6.4",
+    "@shopify/flash-list": "1.7.1",
     "@supabase/supabase-js": "^2.38.4",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "expo": "~51.0.38",
-    "expo-constants": "~16.0.1",
-    "expo-dev-client": "~4.0.28",
-    "expo-image": "~1.13.0",
-    "expo-linking": "~6.3.1",
-    "expo-navigation-bar": "~3.0.7",
-    "expo-router": "~3.5.14",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
-    "expo-web-browser": "~13.0.3",
+    "expo": "^52.0.6",
+    "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.1",
+    "expo-image": "~2.0.0",
+    "expo-linking": "~7.0.2",
+    "expo-navigation-bar": "~4.0.2",
+    "expo-router": "~4.0.5",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.2",
+    "expo-web-browser": "~14.0.1",
     "lodash": "^4.17.21",
     "lucide-react-native": "^0.445.0",
     "nativewind": "next",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-native": "0.74.5",
+    "react-native": "0.76.1",
     "react-native-calendars": "^1.1307.0",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "6.4.1",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.2.0",
+    "react-native-screens": "~4.0.0",
+    "react-native-svg": "15.8.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "~0.19.13",
     "sonner-native": "^0.14.2",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.7.0",
     "ajv": "^8.17.1",
