--- a/lab-4/app.json
+++ b/lab-4/app.json
@@ -3,13 +3,27 @@
     "name": "lab-4",
     "slug": "lab-4",
     "version": "1.0.0",
+    "newArchEnabled": true,
     "scheme": "lab-4",
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "node_modules/@expo-google-fonts/be-vietnam/BeVietnam_400Regular.ttf",
+            "node_modules/@expo-google-fonts/be-vietnam/BeVietnam_500Medium.ttf",
+            "node_modules/@expo-google-fonts/be-vietnam/BeVietnam_700Bold.ttf",
+            "node_modules/@expo-google-fonts/be-vietnam/BeVietnam_800ExtraBold.ttf"
+          ]
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true,
       "tsconfigPaths": true
@@ -22,7 +36,12 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true
+    },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
