--- a/lab-4/package.json
+++ b/lab-4/package.json
@@ -12,75 +12,56 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/be-vietnam": "^0.2.0",
     "@expo/vector-icons": "^14.0.0",
-    "@gorhom/bottom-sheet": "^5.0.4",
-    "@hookform/resolvers": "^3.9.0",
+    "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/slider": "4.5.2",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/drawer": "^6.6.15",
-    "@react-navigation/material-top-tabs": "^6.6.14",
-    "@react-navigation/native": "^6.1.7",
-    "@rn-primitives/accordion": "^1.1.0",
-    "@rn-primitives/alert-dialog": "^1.1.0",
-    "@rn-primitives/avatar": "^1.1.0",
-    "@rn-primitives/checkbox": "^1.1.0",
-    "@rn-primitives/dialog": "^1.1.0",
+    "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/drawer": "^7.0.0",
+    "@react-navigation/material-top-tabs": "^7.0.18",
+    "@react-navigation/native": "^7.0.13",
     "@rn-primitives/label": "^1.1.0",
     "@rn-primitives/portal": "^1.1.0",
-    "@rn-primitives/select": "^1.1.0",
     "@rn-primitives/separator": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
-    "@rn-primitives/switch": "^1.1.0",
-    "@rn-primitives/tabs": "^1.1.0",
-    "@rn-primitives/toggle": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
     "@supabase/supabase-js": "^2.38.4",
-    "@tanstack/react-table": "^8.20.5",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "^51.0.39",
-    "expo-constants": "~16.0.1",
-    "expo-dev-client": "~4.0.29",
-    "expo-image": "~1.13.0",
-    "expo-linking": "~6.3.1",
-    "expo-navigation-bar": "~3.0.7",
-    "expo-router": "^3.5.24",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
-    "expo-web-browser": "~13.0.3",
-    "lodash": "^4.17.21",
-    "lucide-react-native": "^0.445.0",
-    "nativewind": "next",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.53.0",
-    "react-native": "0.74.5",
-    "react-native-calendars": "^1.1307.0",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "~3.10.1",
+    "expo": "~52.0.14",
+    "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.1",
+    "expo-image": "~2.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-navigation-bar": "^4.0.5",
+    "expo-router": "~4.0.11",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.5",
+    "expo-web-browser": "~14.0.1",
+    "lucide-react-native": "^0.464.0",
+    "nativewind": "latest",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "6.5.1",
+    "react-native-reanimated": "3.16.2",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.2.0",
-    "react-native-tab-view": "^3.5.2",
-    "react-native-toast-message": "^2.2.1",
-    "react-native-url-polyfill": "^2.0.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-tab-view": "^4.0.5",
     "react-native-web": "~0.19.10",
-    "sonner-native": "^0.14.2",
+    "sonner-native": "^0.16.1",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.5.2",
-    "tailwind-rn": "^4.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "@types/react-native-snap-carousel": "^3.8.11",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@types/react": "~18.3.12",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
-    "ajv": "^8.17.1",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
     "prettier": "^3.2.5",
@@ -91,13 +72,6 @@
   "eslintConfig": {
     "extends": "universe/native",
     "root": true
-  },
-  "expo": {
-    "install": {
-      "exclude": [
-        "react-native-safe-area-context"
-      ]
-    }
   },
   "private": true
 }
