--- a/lab-4/package.json
+++ b/lab-4/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/be-vietnam": "^0.2.0",
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/prebuild-config": "~8.0.0",
     "@expo/vector-icons": "^14.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -28,27 +30,29 @@
     "@supabase/supabase-js": "^2.38.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "~52.0.14",
+    "expo": "~52.0.20",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-image": "~2.0.3",
     "expo-linking": "~7.0.3",
-    "expo-navigation-bar": "^4.0.5",
-    "expo-router": "~4.0.11",
+    "expo-navigation-bar": "~4.0.6",
+    "expo-router": "~4.0.15",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.5",
+    "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "lucide-react-native": "^0.464.0",
     "nativewind": "latest",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-hook-form": "^7.54.2",
+    "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "3.16.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.10.1",
     "react-native-tab-view": "^4.0.5",
     "react-native-web": "~0.19.10",
     "sonner-native": "^0.16.1",
@@ -64,9 +68,10 @@
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
+    "metro": "^0.81.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
