feat(lab-4): add profile screen layout and user information display with sign-out functionality

--- a/lab-4/package.json
+++ b/lab-4/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/material-top-tabs": "^7.0.18",
     "@react-navigation/native": "^7.0.13",
     "@rn-primitives/alert-dialog": "^1.1.0",
+    "@rn-primitives/avatar": "^1.1.0",
     "@rn-primitives/label": "^1.1.0",
     "@rn-primitives/portal": "^1.1.0",
     "@rn-primitives/separator": "^1.1.0",
