feat(lab-5): add new icons and form validation, update layouts and remove unused components, and implement image-input component with pick an image, take a picture feature

--- a/lab-5/package.json
+++ b/lab-5/package.json
@@ -12,21 +12,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/be-vietnam": "^0.2.0",
     "@expo/vector-icons": "^14.0.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.3",
+    "@rn-primitives/alert-dialog": "^1.1.0",
+    "@rn-primitives/label": "^1.1.0",
+    "@rn-primitives/portal": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^52.0.23",
+    "expo-camera": "~16.0.10",
     "expo-constants": "~17.0.3",
+    "expo-image": "~2.0.3",
+    "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
+    "expo-navigation-bar": "^4.0.6",
     "expo-router": "~4.0.6",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "lucide-react-native": "^0.469.0",
     "nativewind": "latest",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "3.16.2",
@@ -34,7 +47,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.10",
     "sonner-native": "^0.16.2",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
