--- a/lab-5/package.json
+++ b/lab-5/package.json
@@ -48,7 +48,9 @@
     "react-native-web": "~0.19.10",
     "sonner-native": "^0.16.2",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "expo-location": "~18.0.4",
+    "react-native-maps": "1.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
