--- a/lab-5/package.json
+++ b/lab-5/package.json
@@ -20,8 +20,10 @@
     "@rn-primitives/alert-dialog": "^1.1.0",
     "@rn-primitives/label": "^1.1.0",
     "@rn-primitives/portal": "^1.1.0",
+    "@rn-primitives/separator": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
+    "@supabase/supabase-js": "^2.47.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^52.0.23",
@@ -30,6 +32,7 @@
     "expo-image": "~2.0.3",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.4",
     "expo-navigation-bar": "^4.0.6",
     "expo-router": "~4.0.6",
     "expo-status-bar": "~2.0.0",
@@ -42,18 +45,18 @@
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.10",
     "sonner-native": "^0.16.2",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.24.1",
-    "expo-location": "~18.0.4",
-    "react-native-maps": "1.18.0"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/node": "^22.10.5",
     "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
