--- a/lab-5/package.json
+++ b/lab-5/package.json
@@ -24,11 +24,13 @@
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
     "@supabase/supabase-js": "^2.47.10",
+    "base64-arraybuffer": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^52.0.23",
     "expo-camera": "~16.0.10",
     "expo-constants": "~17.0.3",
+    "expo-file-system": "~18.0.6",
     "expo-image": "~2.0.3",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
