--- a/lab-5/package.json
+++ b/lab-5/package.json
@@ -53,6 +53,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.10",
     "sonner-native": "^0.16.2",
+    "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.1"
   },
