--- a/lab-5/package.json
+++ b/lab-5/package.json
@@ -35,6 +35,7 @@
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.4",
+    "expo-media-library": "^17.0.4",
     "expo-navigation-bar": "^4.0.6",
     "expo-router": "~4.0.6",
     "expo-status-bar": "~2.0.0",
@@ -55,7 +56,8 @@
     "sonner-native": "^0.16.2",
     "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "expo-av": "~15.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
