feat(lab-5): add video recording functionality with camera permissions and save options; integrate expo-video for playback

--- a/lab-5/app.json
+++ b/lab-5/app.json
@@ -3,7 +3,6 @@
     "name": "lab-5",
     "slug": "lab-5",
     "version": "1.0.0",
-
     "scheme": "lab-5",
     "web": {
       "bundler": "metro",
@@ -23,19 +22,30 @@
         {
           "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
         }
+      ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ],
+      [
+        "expo-video",
+        {
+          "supportsBackgroundPlayback": true,
+          "supportsPictureInPicture": true
+        }
       ]
     ],
     "experiments": {
       "typedRoutes": true,
-
       "tsconfigPaths": true
     },
-
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-
     "userInterfaceStyle": "light",
-
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
