--- a/lab-5/package.json
+++ b/lab-5/package.json
@@ -57,7 +57,8 @@
     "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.1",
-    "expo-av": "~15.0.1"
+    "expo-av": "~15.0.1",
+    "expo-video": "~2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
