--- a/lab-5/package.json
+++ b/lab-5/package.json
@@ -28,8 +28,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^52.0.23",
+    "expo-av": "~15.0.1",
     "expo-camera": "~16.0.10",
     "expo-constants": "~17.0.3",
+    "expo-device": "^7.0.1",
     "expo-file-system": "~18.0.6",
     "expo-image": "~2.0.3",
     "expo-image-picker": "~16.0.3",
@@ -37,9 +39,11 @@
     "expo-location": "~18.0.4",
     "expo-media-library": "^17.0.4",
     "expo-navigation-bar": "^4.0.6",
+    "expo-notifications": "^0.29.11",
     "expo-router": "~4.0.6",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
+    "expo-video": "~2.0.3",
     "expo-web-browser": "~14.0.1",
     "lucide-react-native": "^0.469.0",
     "nativewind": "latest",
@@ -56,9 +60,7 @@
     "sonner-native": "^0.16.2",
     "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.24.1",
-    "expo-av": "~15.0.1",
-    "expo-video": "~2.0.3"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
